EXTRA_DIST = lang.mk
SUBDIRS = \
	augext \
	augctx \
	augsys \
	augmar \
	augpy \
	augrb \
	augres \
	augutil \
	augsrv \
	augnet \
	augas \
	htdigest \
	mar

include_HEADERS = \
	aug.h \
	augabi.h \
	augmod.h \
	augtypes.h \
	augext.h \
	augctx.h \
	augsys.h \
	augmar.h \
	augutil.h \
	augsrv.h \
	augnet.h
