EXTRA_DIST = lang.mk
SUBDIRS = \
	augctxpp \
	augsyspp \
	augmarpp \
	augutilpp \
	augservpp \
	augnetpp \
	augsubpp \
	augaspp \
	augd \
	htdigest

include_HEADERS = \
	augpp.hpp \
	augabipp.hpp \
	augctxpp.hpp \
	augmodpp.hpp \
	augnullpp.hpp \
	augsyspp.hpp \
	augmarpp.hpp \
	augutilpp.hpp \
	augservpp.hpp \
	augnetpp.hpp
