EXTRA_DIST = lang.mk
SUBDIRS = \
	augctxpp \
	augsyspp \
	augmarpp \
	augutilpp \
	augservpp \
	augnetpp \
	augaspp \
	augsubpp \
	augd \
	htdigest

include_HEADERS = \
	augpp.hpp \
	augabipp.hpp \
	augctxpp.hpp \
	augmodpp.hpp \
	augnullpp.hpp \
	augsyspp.hpp \
	augmarpp.hpp \
	augutilpp.hpp \
	augservpp.hpp \
	augnetpp.hpp
