EXTRA_DIST = \
	buffer.py \
	interpreter.py \
	log.py \
	modclient.py \
	modecho.py \
	modproxy.py \
	modskel.py \
	modstop.py \
	modtest1.py \
	modtest2.py \
	modtest3.py \
	modtest4.py \
	modtest5.py \
	modtest6.py \
	modtest7.py

pythondir = $(prefix)/python
python_DATA = \
	buffer.py \
	log.py \
	modclient.py \
	modecho.py \
	modproxy.py \
	modskel.py
