EXTRA_DIST = \
	buffer.py \
	interpreter.py \
	log.py \
	pyclient.py \
	pyecho.py \
	pyproxy.py \
	pyskel.py \
	pystop.py \
	pytest1.py \
	pytest2.py \
	pytest3.py \
	pytest4.py \
	pytest5.py \
	pytest6.py \
	pytest7.py

pythondir = $(prefix)/python
python_DATA = \
	buffer.py \
	interpreter.py \
	log.py \
	pyclient.py \
	pyecho.py \
	pyproxy.py \
	pyskel.py \
	pystop.py
