EXTRA_DIST = \
	augutil.py \
	log.py \
	pyclient.py \
	pyecho.py \
	pyproxy.py \
	pyskel.py \
	pystop.py \
	pytest1.py \
	pytest2.py \
	pytest3.py \
	pytest4.py \
	pytest5.py \
	pytest6.py \
	pytest7.py

if ENABLE_PYTHON
pythondir = $(prefix)/python
python_DATA = \
	augutil.py \
	log.py \
	pyclient.py \
	pyecho.py \
	pyproxy.py \
	pyskel.py \
	pystop.py
endif