EXTRA_DIST = \
	aubidl \
	augutil.rb  \
	log.rb \
	rbecho.rb \
	rbflags \
	rbskel.rb \
	rbstop.rb \
	rbtest1.rb \
	rbtest2.rb \
	rbtest3.rb \
	rbtest4.rb \
	rbtest5.rb \
	rbtest6.rb \
	rbtest7.rb

bin_SCRIPTS = \
	aubidl

if ENABLE_RUBY
rubydir = $(prefix)/ruby
ruby_DATA = \
	augutil.rb \
	log.rb \
	rbecho.rb \
	rbflags \
	rbskel.rb \
	rbstop.rb
endif
